src/test/resources/typeSystemTestModels/invalid/constructors/ConstructorFormalParametersDifferentName.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.constructors;

public class ConstructorFormalParametersDifferentName{

  public ConstructorFormalParametersDifferentName(int n, double n) {

  }

}
